SET(SRC_FILES game.c graph.c shape.c main.c)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK2 REQUIRED gtk+-2.0)
PKG_CHECK_MODULES(GDKPIXBUF REQUIRED gdk-pixbuf-2.0)
PKG_CHECK_MODULES(GLIB2 REQUIRED glib-2.0)
PKG_CHECK_MODULES(GOBJECT2 REQUIRED gobject-2.0)
PKG_CHECK_MODULES(GMODULE2 REQUIRED gmodule-2.0)

INCLUDE_DIRECTORIES(
	${GTK2_INCLUDE_DIRS}
	${GDKPIXBUF_INCLUDE_DIRS}
	${GLIB2_INCLUDE_DIRS}
	${GOBJECT2_INCLUDE_DIRS}
	${GMODULE2_INCLUDE_DIRS}
)
MESSAGE(STATUS ${GTK2_LIBRARIES})
ADD_EXECUTABLE(tetris ${SRC_FILES})
TARGET_LINK_LIBRARIES(tetris
	${GOBJECT2_LIBRARIES}
	${GMODULE2_LIBRARIES}
	${GTK2_LIBRARIES}
	${GLIB2_LIBRARIES}
	${GDKPIXBUF_LIBRARIES}
)
